--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 appdirs>=1.4.4
+beautifulsoup4>=4.9.3
 black>=20.8b1
 certifi>=2020.12.5
 chardet>=4.0.0
@@ -18,6 +19,7 @@ regex>=2020.11.13
 requests>=2.25.1
 rope>=0.18.0
 six>=1.15.0
+soupsieve>=2.1
 toml>=0.10.2
 typed-ast>=1.4.2
 typing-extensions>=3.7.4.3
