--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ certifi>=2020.12.5
 chardet>=4.0.0
 click>=7.1.2
 flake8>=3.8.4
-idna>=2.10
+idna>=2.5, <3
 mccabe>=0.6.1
 mypy-extensions>=0.4.3
 numpy>=1.19.5
